--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 .language-selector {
   -webkit-appearance: none; /* Désactive l'apparence native sur iOS */
   appearance: none;
+  background-color: azure;
 }
