--- a/style.css
+++ b/style.css
@@ -1,32 +1,37 @@
-.language-selector1 select {
-  -webkit-appearance: none; /* Désactive l'apparence native sur iOS */
-  appearance: none;
-}
-
-.language-selector1 select {
-  padding-right: 22px !important;
-  background-image: url("https://www.freeiconspng.com/uploads/arrow-icon--myiconfinder-23.png") !important;
-  background-position: calc(100px - 7px) !important;
-  background-repeat: no-repeat !important;
-  color: black;
-}
-
-.language-selector2 select {
-  -webkit-appearance: button;
-  appearance: auto;
-  background: transparent;
-  color: black;
-}
-
-.language-selector3 select {
-  -webkit-appearance: menulist;
-  appearance: auto;
-  background: transparent;
-  color: black;
-}
 select {
+  --main-text-color: #314386;
+  --secondary-text-color: #f4f4f4;
+  --h2-font-basic-color: #ff7b01;
+  --h2-font-color: #314386;
+  --h2-third-color: #f4f4f4;
+  --third-text-color: #ce0033;
+  --h-main-italic-color: #ff7b01;
+  --h-secondary-italic-color: #314386;
+  --main-bg-color: #f4f4f4;
+  --secondary-bg-color: #dbdbdb;
+  --fourth-bg-color: rgba(49, 67, 134, 0.17);
+  --third-bg-color: #ff7b01;
+  --five-bg-color: #314386;
+  --main-border-color: #ff7b01;
+  --cta-main-bg-color: #314386;
+  --cta-secondary-bg-color: #ff7b01;
+  --cta-third-bg-color: #f4f4f4;
+  --cta-hover-main-bg-color: #172041;
+  --cta-hover-secondary-bg-color: #994900;
+  --main-font-family: "Open Sans", "Helvetica", "Arial", sans-serif;
+  --hover-bg-color-mosaic: rgba(155, 60, 50, 0.84);
+  --hover-nav-color: #ff7b01;
+  --border-radius-30px: 30px;
+  visibility: visible;
+  box-sizing: border-box;
+  cursor: pointer;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  font-weight: 700;
+  line-height: 1.666em;
+  margin: 0px 6.4vw 0px 0px;
+  background-color: white;
   border: none;
-}
-.title {
-  color: red;
+  color: var(--main-text-color);
 }
