--- a/style.css
+++ b/style.css
@@ -147,3 +147,34 @@ header {
   transform: translateY(0px);
   visibility: visible;
 }
+body {
+  --main-text-color: #314386;
+  --secondary-text-color: #f4f4f4;
+  --h2-font-basic-color: #ff7b01;
+  --h2-font-color: #314386;
+  --h2-third-color: #f4f4f4;
+  --third-text-color: #ce0033;
+  --h-main-italic-color: #ff7b01;
+  --h-secondary-italic-color: #314386;
+  --main-bg-color: #f4f4f4;
+  --secondary-bg-color: #dbdbdb;
+  --fourth-bg-color: rgba(49, 67, 134, 0.17);
+  --third-bg-color: #ff7b01;
+  --five-bg-color: #314386;
+  --main-border-color: #ff7b01;
+  --cta-main-bg-color: #314386;
+  --cta-secondary-bg-color: #ff7b01;
+  --cta-third-bg-color: #f4f4f4;
+  --cta-hover-main-bg-color: #172041;
+  --cta-hover-secondary-bg-color: #994900;
+  --main-font-family: "Open Sans", "Helvetica", "Arial", sans-serif;
+  --hover-bg-color-mosaic: rgba(155, 60, 50, 0.84);
+  --hover-nav-color: #ff7b01;
+  --border-radius-30px: 30px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: var(--main-text-color);
+  background-color: var(--main-bg-color);
+  font-family: "Open Sans", "Helvetica", "Arial", sans-serif;
+}
